<resources>
    <string name="app_name">Global Communication</string>
    <string name="initiating_call">Initiating call…</string>
    <string name="hang_up_no_active_call">No active call to hang up.</string>
    <string name="hint_email_example">user@email.com</string>
    <string name="hint_password">password</string>
    <string name="welcome_message">Welcome to Global Communication</string>
    <string name="login_button_text">Log In</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="hint_profile_name">Profile Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_language">Language</string>
    <string name="continue_button_text">Continue</string>
    <string-array name="languages">
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Azerbaijani</item>
        <item>Belarusian</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Chinese</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Galician</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kannada</item>
        <item>Kazakh</item>
        <item>Korean</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Malay</item>
        <item>Marathi</item>
        <item>Maori</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Tagalog</item>
        <item>Tamil</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
    </string-array>
    <string name="audio_recording_instructions">
    For the voice cloning procedure, please read the following passage aloud. Speak clearly and naturally. When ready, press "Start Recording." The recording will stop automatically after 8 seconds.
</string>
    <string name="audio_text_to_read">
    "Clear communication is the foundation of strong relationships. Every word we speak has the power to inspire, inform, and connect us to one another. Take a deep breath, speak slowly, and let your voice carry your message with clarity and confidence."
</string>
    <string name="start_recording">Start Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="submit_recording">Submit </string>
    <string name="recording_started">Recording started…</string>
    <string name="recording_stopped">Recording stopped.</string>
    <string name="recording_playing">Playing recording…</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="voice_recording_title">Voice Recording</string>
    <string name="welcome_User_message">Welcome, %s</string>
    <string name="logout">Logout</string>
    <string name="proceed">Proceed</string>
    <string name="refresh">refresh</string>
    <string name="call_center">Call Center</string>
    <string name="call">Call</string>
    <string name="hang_up">Hang up</string>
    <string name="back">Back</string>
    <string name="hint_add_friend">Enter friend’s email</string>
    <string name="btn_add_friend">Add Friend</string>


</resources>
