<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/call_center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvCallerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="Waiting for Call..."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCallerInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnHangUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/purple_500"
        android:elevation="4dp"
        android:padding="12dp"
        android:text="@string/call"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:rippleColor="@color/purple_200" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHangUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/purple_500"
        android:elevation="4dp"
        android:padding="12dp"
        android:text="@string/hang_up"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:rippleColor="@color/purple_200" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:padding="12dp"
        android:text="@string/back"
        android:textColor="@color/teal_700"
        app:cornerRadius="8dp"
        app:rippleColor="@color/teal_200"
        app:strokeColor="@color/teal_200"
        app:strokeWidth="1dp" />


</RelativeLayout>
